--- a/index.html
+++ b/index.html
@@ -880,7 +880,7 @@
                                 <div class="messages"></div>
                             </div>
                         </form> -->
-                        <a href="mailto:info@thenextmovegroup.com" class="btn ss-btn-primary" target="_blank" style="margin-top: 25px;font-size: 3rem;max-width:200px;margin-left: 50%;transform:translateX(-50%);">Let's Talk</a>
+                        <a href="/contact" class="btn ss-btn-primary" target="_blank" style="margin-top: 25px;font-size: 3rem;max-width:200px;margin-left: 50%;transform:translateX(-50%);">Let's Talk</a>
                     </div><!--/.form-wrapper-->
                 </div><!--/.form-block-->
             </div>
