--- a/index.html
+++ b/index.html
@@ -774,10 +774,10 @@
                    </div>
                </div> -->
            <div class="two-button">
-                   <a href="#" target="_blank" class="btn ss-btn-secondary" target="_blank">Coming Soon: Jefferson County Development <br />Authority, West VA</a>
+                   <a href="/jeffcowv" target="_blank" class="btn ss-btn-secondary" target="_blank">Jefferson County Development Authority, West Virginia Executive Director</a>
                    <div class="logos-block">
                        <div class="item" >
-                           <!-- <img src="/assets/img/execsearch/bgchamber-logo.png" alt="Logo"> -->
+                           <img src="/assets/img/execsearch/jcda-new-logo.png" alt="Logo">
                        </div>
                    </div>
                </div>
